Fixed another SQL injection bug, preparing for release.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@2605 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Trac 0.9.2  (Dec 5, 2005)
+http://svn.edgewall.com/repos/trac/tags/trac-0.9.2
+
+ * Fixed SQL injection vulnerability in ticket search module.
+ * Fixed broken ticket email notifications.
+
 Trac 0.9.1  (Dec 1, 2005)
 http://svn.edgewall.com/repos/trac/tags/trac-0.9.1
 
